# todo-app

./: .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  development-commands.md
.claude/: APP_FLOW.md  (+6 more)
backend/: .env.dev  .env.example  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  init-test-db.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d4afd73e72a_add_priority_subtasks_sections_sync_.py  5500b4fc0d01_add_photo_and_icon_fields.py  5a5959f151fa_initial_models_add_todos_and_recipes.py  5ca77c4c04ff_add_important_and_assigned_to_to_todos.py  603854e284dd_mealboard_overhaul.py  7747b0506845_add_family_members_and_responsibilities_.py  7c14f1caab65_add_lists_table.py  9f725bf2eef2_add_color_to_family_members.py  a1b2c3d4e5f1_item_model_expand.py  a1b2c3d4e5f2_item_model_switch.py  a1b2c3d4e5f3_item_model_contract.py  a1b2c3d4e5f6_add_timezone_to_calendar_events.py  a5510f8157a2_add_calendar_events_table.py  b2c3d4e5f6a7_add_calendars_table.py  ba4ce78a08f8_rename_todos_table_to_tasks.py  bf6cda275fa8_fix_family_members_and_convert_todo_.py  c0fab9bfd27a_aggregation_rework_food_shopping.py  c780d2eaccde_add_calendar_integration_table_and_sync_.py  c8f3a1b2d4e5_multi_category_responsibilities.py  cf4f8428948e_add_auth_tables.py  d1e2f3a4b5c6_remap_family_member_colors.py  d4046930b2e2_add_meal_plans_table_and_update_recipes.py  d4e5f6a7b8c9_pantry_unique_nulls_not_distinct.py  e20c4aa609e6_add_responsibilities_table.py  e5a6b7c8d9e0_recipe_source_url.py  f70b63a57ef3_add_app_settings_table.py  f8a9b0c1d2e3_meal_entry_undo_token.py
backend/app/: celery_app.py  crud.py  crud_app_settings.py  crud_calendar_events.py  crud_calendar_integrations.py  crud_calendars.py  crud_family_members.py  crud_food_items.py  crud_items.py  crud_lists.py  crud_meal_entries.py  crud_meal_plans.py  crud_meal_slot_types.py  crud_recipes.py  crud_responsibilities.py  crud_sections.py  crud_tasks.py  database.py  main.py  models.py  schemas.py  tasks.py  uploads.py
backend/app/auth/: __init__.py  config.py  dependencies.py  errors.py  logging_utils.py  models.py  passwords.py  routes.py  schemas.py  service.py  tokens.py
backend/tests/: conftest.py  factories.py
(+335 files in other folders)
