[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "ipykernel>=7.1.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "caldav>=1.4",
    "icalendar>=6.0",
    "cryptography>=43.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "testcontainers[postgres]>=4.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"
